Complete exercise 001 CSS methods

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--External CSS Link below-->
+    <link rel="stylesheet" href="styles.css">
+    <!--End-->
+
+    <!--Beginning of internal CSS linking below-->
+    <style>
+      p{
+        color:white;
+        background:green;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align:left;
+        font-size: 500;
+        font-weight:lighter;
+      }
+    </style>
+    <!--End of CSS-->
+
+    <!--Title-->
     <title>Methods for Adding CSS</title>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+
+    <!--Inline CSS Linking-->
+    <button style="color:black; background-color:orange; text-align:left; font-size:medium; font-weight:750;">Inline Method</button>
   </body>
 </html>
